--- a/src/components/photo-item/styles.module.scss
+++ b/src/components/photo-item/styles.module.scss
@@ -4,6 +4,11 @@
   gap: 2rem;
   align-items: center;
   margin: 0 auto;
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
 }
 
 .text-block {
@@ -19,4 +24,5 @@
 .media-block {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
